--- a/final-project-fe/Pages/UserProfile.cshtml
+++ b/final-project-fe/Pages/UserProfile.cshtml
@@ -24,23 +24,12 @@
 					<div class="profile-avatar-card">
 						@if (Model.Profile?.UserMetaData != null)
 						{
-							<img src="@Model.Profile.UserMetaData?.Avatar ?? "https://cdn-icons-png.flaticon.com/512/149/149071.png""
+							<img src="@(Model.Profile.UserMetaData?.Avatar ?? "images/resources/friend-avatar9.jpg")"
 							alt="Avatar" class="profile-avatar rounded-circle shadow" width="120" height="120" />
 							<h4 class="profile-name mt-4">
 								@($"{Model.Profile.UserMetaData?.FirstName} {Model.Profile.UserMetaData?.LastName}")
 							</h4>
 						}
-						<div class="social-links">
-							<a href="#" class="social-link facebook">
-								<i class="bi bi-facebook"></i>
-							</a>
-							<a href="#" class="social-link linkedin">
-								<i class="bi bi-linkedin"></i>
-							</a>
-							<a href="#" class="social-link youtube">
-								<i class="bi bi-youtube"></i>
-							</a>
-						</div>
 					</div>
 				</div>
 			</div>
@@ -687,21 +676,42 @@
 														@if (Model.Courses.CurrentPage > 1)
 														{
 															<li class="page-item">
-																<a class="page-link" href="?currentPage=@(Model.Courses.CurrentPage - 1)">Previous</a>
+																@if (Model.IsOwnUser)
+																{
+																	<a class="page-link" href="?currentPage=@(Model.Courses.CurrentPage - 1)">Previous</a>
+																}
+																else
+																{
+																	<a class="page-link" href="?currentPage=@(Model.Courses.CurrentPage - 1)&userId=@Request.Query["userId"]">Previous</a>
+																}
 															</li>
 														}
 
 														@for (int i = 1; i <= Model.Courses.TotalPages; i++)
 														{
 															<li class="page-item @(i == Model.Courses.CurrentPage ? "active" : "")">
-																<a class="page-link" href="?currentPage=@i">@i</a>
+																@if (Model.IsOwnUser)
+																{
+																	<a class="page-link" href="?currentPage=@i">@i</a>
+																}
+																else
+																{
+																	<a class="page-link" href="?currentPage=@i&userId=@Request.Query["userId"]">@i</a>
+																}
 															</li>
 														}
 
 														@if (Model.Courses.CurrentPage < Model.Courses.TotalPages)
 														{
 															<li class="page-item">
-																<a class="page-link" href="?currentPage=@(Model.Courses.CurrentPage + 1)">Next</a>
+																@if (Model.IsOwnUser)
+																{
+																	<a class="page-link" href="?currentPage=@(Model.Courses.CurrentPage + 1)">Next</a>
+																}
+																else
+																{
+																	<a class="page-link" href="?currentPage=@(Model.Courses.CurrentPage + 1)&userId=@Request.Query["userId"]">Next</a>
+																}
 															</li>
 														}
 													</ul>
