--- a/final-project-fe/Pages/DoAssignment.cshtml
+++ b/final-project-fe/Pages/DoAssignment.cshtml
@@ -334,6 +334,9 @@
                     <a id="meetLink" href="@Model?.MeetingLink" target="_blank" class="btn-custom btn-outline-custom">
                         📹 Join the meeting
                     </a>
+                    <button type="button" class="btn-custom btn-outline-custom" onclick="location.reload()">
+                        🔄 Reload
+                    </button>
                 </div>
             }
             else
