--- a/final-project-fe/Pages/Mentor/MentorPage/EditCourse.cshtml
+++ b/final-project-fe/Pages/Mentor/MentorPage/EditCourse.cshtml
@@ -1411,7 +1411,7 @@
                                                                                                     </label>
                                                                                                     <input type="url"
                                                                                                            class="form-control form-control-lg border-dark"
-                                                                                                           name="EditAssignment.MeetLink"
+                                                                                                           name="Assignment.MeetLink"
                                                                                                            style="border: 2px solid #000;"
                                                                                                            placeholder="https://meet.google.com/xxx-xxxx-xxx" />
                                                                                                     <div class="form-text text-muted">
