--- a/final-project-fe/Pages/Mentor/Shared/_MentorLayout2.cshtml
+++ b/final-project-fe/Pages/Mentor/Shared/_MentorLayout2.cshtml
@@ -32,6 +32,7 @@
                         .ToList();
     }
 }
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -39,9 +40,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"]</title>
+    <link rel="icon" type="image/x-icon" href="~/images/fav_icon.png" />
     <!-- ========== All CSS files linkup ========= -->
     <link rel="stylesheet" href=@Url.Content("~/MentorAssets/css/bootstrap.min.css") />
-    <link rel="icon" type="image/x-icon" href="~/images/fav_icon.png" />
+    <link rel="stylesheet" href=@Url.Content("~/MentorAssets/css/lineicons.css") rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href=@Url.Content("~/MentorAssets/css/materialdesignicons.min.css") rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href=@Url.Content("~/MentorAssets/css/main.css") />
 </head>
